; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/ecryptfs/extr_crypto.c_ecryptfs_lower_offset_for_extent.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/ecryptfs/extr_crypto.c_ecryptfs_lower_offset_for_extent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ecryptfs_crypt_stat = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, %struct.ecryptfs_crypt_stat*)* @ecryptfs_lower_offset_for_extent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ecryptfs_lower_offset_for_extent(i32* %0, i32 %1, %struct.ecryptfs_crypt_stat* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.ecryptfs_crypt_stat*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.ecryptfs_crypt_stat* %2, %struct.ecryptfs_crypt_stat** %6, align 8
  %7 = load %struct.ecryptfs_crypt_stat*, %struct.ecryptfs_crypt_stat** %6, align 8
  %8 = getelementptr inbounds %struct.ecryptfs_crypt_stat, %struct.ecryptfs_crypt_stat* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.ecryptfs_crypt_stat*, %struct.ecryptfs_crypt_stat** %6, align 8
  %11 = getelementptr inbounds %struct.ecryptfs_crypt_stat, %struct.ecryptfs_crypt_stat* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* %5, align 4
  %14 = mul nsw i32 %12, %13
  %15 = add nsw i32 %9, %14
  %16 = load i32*, i32** %4, align 8
  store i32 %15, i32* %16, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
